# sz_rabbit_publisher

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  NEXT_STEPS.md  README.md  SECURITY.md  STATUS.md  deny.toml  docker-compose.test.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/: file_reader.rs  lib.rs  main.rs  publisher.rs  stats.rs
supply-chain/: config.toml
tests/: integration_test.rs
