[package]
name = "sz_rabbit_publisher"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Brian Macy"]
description = "High-performance RabbitMQ publisher for JSONL files"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sz_rabbit_publisher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "3"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
flate2 = "1"
lapin = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
